test-cases/negative/test_126_object_property_type_mismatch.lay
# negative test: object property with wrong type
# expected: type checker should catch this

define class Person
  the property name of type String
  the property age of type Number

the variable person of type Person is a new Person with
  name is 'John'
  age is 'not a number'


